--- a/.github/workflows/ecr-build.yaml
+++ b/.github/workflows/ecr-build.yaml
@@ -27,7 +27,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ secrets.REGISTRY }}  ## 363594220768.dkr.ecr.us-east-1.amazonaws.com
         ECR_REPOSITORY: ${{ secrets.REPO_NAME }} ##our-safe-cr
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: sample-app
       run: |
         # Build a docker container and push it to ECR 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
